--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="scores">
             <button onclick="rollMonster()">Roll</button>
             <h1>Találd meg:</h1>
-            <h1 id="rolledMonster">-</h1>
+            <p id="rolledMonster">-</p>
             <h1>Eredmény:</h1>
             <h1 id="score">-</h1>
         </div>
@@ -83,40 +83,3 @@
 </body>
 
 </html>
-
-<!-- 
-            <div class="end-row">
-                <div class="tile" id="1">1</div>
-                <div class="tile" id="2">2</div>
-                <div class="tile" id="3">3</div>
-                <div class="tile" id="4">4</div>
-                <div class="tile" id="5">5</div>
-                <div class="tile" id="6">6</div>
-                <div class="tile" id="7">7</div>
-                <div class="tile" id="8">8</div>
-                <div class="tile" id="9">9</div>
-            </div>
-            <div class="middle-row">
-                <div class="tile" id="24">24</div>
-                <div class="tile" id="10">10</div>
-            </div>
-            <div class="middle-row">
-                <div class="tile" id="23">23</div>
-                <div class="tile" id="11">11</div>
-            </div>
-            <div class="middle-row">
-                <div class="tile" id="22">22</div>
-                <div class="tile" id="12">12</div>
-            </div>
-            <div class="end-row">
-                <div class="tile" id="21">21</div>
-                <div class="tile" id="20">20</div>
-                <div class="tile" id="19">19</div>
-                <div class="tile" id="18">18</div>
-                <div class="tile" id="17">17</div>
-                <div class="tile" id="16">16</div>
-                <div class="tile" id="15">15</div>
-                <div class="tile" id="14">14</div>
-                <div class="tile" id="13">13</div>
-            </div>
-             -->
