játék működik, új pálya még nem tökéletes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
     <main>
         <div id="scores">
+            <button onclick="newGame()">Új pálya</button>
             <button onclick="rollMonster()">Roll</button>
             <h1>Találd meg:</h1>
-            <p id="rolledMonster">-</p>
+            <img src="unknown_monster.png" alt="monter" id="rolledMonster">
             <h1>Eredmény:</h1>
             <h1 id="score">-</h1>
         </div>
